--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@ body {
 <div id="container">
 <div id="main">
   <header>
-     <ul>
+      <ul>
 	<li>
 	    <a href="index.html">Inicio</a>
 	</li>
@@ -57,6 +57,7 @@ body {
   <h1 class="cursivebig"> &#9988; Lorem ipsum Venalit quatium sarem</h1>
   <p> &#10004; Cras congue congue malesuada, <strong>Aenean pharetra enim et</strong> lectus pretium interdum. Sed convallis erat enim, cursus </p>
   <div class="divider"></div>
+  
   </nav>
 </header>
  <div class="start"><a href="#"><img src="images/application.png" alt="Appication" /></a></div>
@@ -66,45 +67,7 @@ body {
       <div class="divider"></div>        
 <div id="slider">
   <div class="container">
-  
-    <ul class="slides">
-      <li>
-        <div class="thumbholder"><img src="images/f7.png" width="350" height="220" alt="I Mac Immagine Disegno" /></div>
-        <div class="txtholder">
-          <h3 class="cursive">Imediacreatives - Cras congue congue malesuada. Aenean pharetra enim et lectus pretium interdum. Sed convallis erat enim, cursus fermentum &#10004;</h3>
-        </div>
-      </li>
-      <li>
-        <div class="thumbholder"><img src="images/f2.png" width="350" height="220" alt="First Image" /></div>
-        <div class="txtholder">
-          <h3 class="cursive">You certainly Cras congue congue malesuada. Aenean pharetra enim et lectus pretium interdum. Sed convallis erat enim, cursus fermentum</h3>
-        </div>
-      </li>
-      <li>
-        <div class="thumbholder"><img src="images/f1.png" width="350" height="220" alt="First Image" /></div>
-        <div class="txtholder">
-          <h3 class="cursive">&#8220; Cras congue congue malesuada. Aenean pharetra enim et lectus pretium interdum. Sed convallis erat enim, cursus fermentum. </h3>
-        </div>
-      </li>
-      <li>
-        <div class="thumbholder"><img src="images/f5.png" width="350" height="220" alt="First Image" /></div>
-        <div class="txtholder">
-          <h3 class="cursive">Cras congue congue malesuada. Aenean pharetra enim et lectus pretium interdum. Sed convallis erat enim, cursus fermentum. </h3>
-        </div>
-      </li>
-      <li>
-        <div class="thumbholder"><img src="images/p1.png" width="350" height="220" alt="First Image" /></div>
-        <div class="txtholder">
-          <h3 class="cursive">Cras congue congue malesuada. Aenean pharetra enim et lectus pretium interdum. Sed convallis erat enim, cursus fermentum </h3>
-        </div>
-      </li>
-    </ul>
-    <ul class="pagination">
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="http://www.imediacreatives.it/logofolio.html">3</a></li>
-      <li><a href="#">4</a></li>
-    </ul>
+    <h1>CONTACTO</h1>
   </div>
 </div>
  <footer> 
