--- a/servicios.html
+++ b/servicios.html
@@ -70,7 +70,7 @@ body {
       <div class="divider"></div>        
 <div id="slider">
   <div class="container">
-    <h1>CONTACTO</h1>
+    <h1>SERVICIOS</h1>
   </div>
 </div>
  <footer> 
