Pruebas de cache con memcached

--- a/cache.html
+++ b/cache.html
@@ -73,7 +73,7 @@ body {
       <div class="divider"></div>        
 <div id="slider">
   <div class="container">
-    <h1>AVISO LEGAL</h1>
+    <h1>SERVICIOS</h1>
   </div>
 </div>
  <footer> 
