Poniendo cambios de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -75,6 +75,9 @@ body {
   <div class="container">
     <h1>CONTACTO</h1>
     <p>FIXED BUG45</p>
+    NOMBRE <input type="text">
+    APELLIDO <input type="text">
+    <button type="submit">ENVIAR</button>
   </div>
 </div>
  <footer> 
