--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
   <header>
      <ul>
 	<li>
-	    <a href="index.html">Inicio Rama 1.7</a>
+	    <a href="index.html">Inicio</a>
 	</li>
 	<li>
 	    <a href="contacto.html">Contacto</a>
