--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
   <header>
      <ul>
 	<li>
-	    <a href="index.html">Inicio NARANJA</a>
+	    <a href="index.html">Inicio CACHE</a>
 	</li>
 	<li>
 	    <a href="contacto.html">Contacto</a>
